refactor: overhaul Internship Plan schema and service logic
- Refactored the Internship Plan table to support a single plan per enterprise and semester, removing the per-assignment structure.
- Updated related SQL triggers and repository methods to reflect the new schema.
- Enhanced the InternshipPlanService to manage plans based on enterprise and semester, including approval and rejection workflows.
- Adjusted the InternshipPlanController to accommodate new endpoints and response structures.
- Improved error handling and added new validation checks for plan states.
- Updated DTOs and mappers to align with the new data model.