@@ -1,23 +1,29 @@
 package com.ueims.service.impl;
 
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.ueims.dto.response.InternshipPlanDTO;
 import com.ueims.exception.AppException;
 import com.ueims.exception.ErrorCode;
-import com.ueims.model.entity.EnterpriseAssignment;
+import com.ueims.model.entity.Enterprise;
 import com.ueims.model.entity.InternshipPlan;
 import com.ueims.model.entity.InternshipPlanItem;
 import com.ueims.model.entity.JobPost;
 import com.ueims.model.entity.Notification;
+import com.ueims.model.entity.Semester;
+import com.ueims.model.entity.User;
+import com.ueims.repository.EnterpriseRepository;
 import com.ueims.repository.InternshipPlanItemRepository;
 import com.ueims.repository.InternshipPlanRepository;
 import com.ueims.repository.JobPostRepository;
+import com.ueims.repository.SemesterRepository;
 import com.ueims.repository.UserRepository;
 import com.ueims.service.InternshipPlanService;
 import com.ueims.service.NotificationService;
@@ -25,18 +31,21 @@ import com.ueims.service.NotificationService;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import lombok.extern.slf4j.Slf4j;
 
 @Service
 @RequiredArgsConstructor
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
+@Slf4j
 public class InternshipPlanServiceImpl implements InternshipPlanService {
-    private final InternshipPlanRepository repository;
-    private final InternshipPlanItemRepository itemRepository;
-    private final UserRepository userRepository;
-    private final com.ueims.repository.EnterpriseAssignmentRepository assignmentRepository;
-    private final JobPostRepository jobPostRepository;
-    private final com.ueims.repository.ApplicationRepository applicationRepository;
-    private final NotificationService notificationService;
+
+    InternshipPlanRepository repository;
+    InternshipPlanItemRepository itemRepository;
+    EnterpriseRepository enterpriseRepository;
+    SemesterRepository semesterRepository;
+    JobPostRepository jobPostRepository;
+    UserRepository userRepository;
+    NotificationService notificationService;
 
     @Override
     public List<InternshipPlan> findAll() {
@@ -48,9 +57,15 @@ public class InternshipPlanServiceImpl implements InternshipPlanService {
         return repository.findById(id).orElse(null);
     }
 
+    /**
+     * Plan SV có thể thấy:
+     * - status = APPROVED
+     * - SV có assignment ACTIVE ở đúng enterprise + semester của plan
+     */
     @Override
+    @Transactional(readOnly = true)
     public InternshipPlan findMyPlan(UUID studentId) {
-        InternshipPlan plan = repository.findByAssignment_Student_UserId(studentId);
+        InternshipPlan plan = repository.findActivePlanForStudent(studentId).orElse(null);
         if (plan != null) {
             plan.setItems(itemRepository.findByPlan_PlanId(plan.getPlanId()));
         }
@@ -58,9 +73,11 @@ public class InternshipPlanServiceImpl implements InternshipPlanService {
     }
 
     @Override
-    public InternshipPlan findByAssignmentId(UUID assignmentId) {
-        List<InternshipPlan> plans = repository.findByAssignment_AssignmentId(assignmentId);
-        InternshipPlan plan = plans.isEmpty() ? null : plans.get(0);
+    @Transactional(readOnly = true)
+    public InternshipPlan findByEnterpriseAndSemester(UUID enterpriseId, UUID semesterId) {
+        InternshipPlan plan = repository
+                .findByEnterprise_EnterpriseIdAndSemester_SemesterId(enterpriseId, semesterId)
+                .orElse(null);
         if (plan != null) {
             plan.setItems(itemRepository.findByPlan_PlanId(plan.getPlanId()));
         }
@@ -68,239 +85,209 @@ public class InternshipPlanServiceImpl implements InternshipPlanService {
     }
 
     @Override
-    public InternshipPlan findByJobPostId(UUID jobPostId) {
-        List<InternshipPlan> plans = repository.findByJobPost_JobPostId(jobPostId);
-        InternshipPlan plan = plans.isEmpty() ? null : plans.get(0);
-        if (plan != null) {
-            plan.setItems(itemRepository.findByPlan_PlanId(plan.getPlanId()));
-        }
-        return plan;
-    }
-
-    @Override
+    @Transactional(readOnly = true)
     public List<InternshipPlan> findPendingMasterPlans() {
-        return repository.findByStatus("PENDING_APPROVAL").stream()
+        return repository.findAllPending().stream()
                 .map(plan -> {
                     plan.setItems(itemRepository.findByPlan_PlanId(plan.getPlanId()));
                     return plan;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional
-    public InternshipPlan approveMasterPlan(UUID planId) {
-        InternshipPlan masterPlan = repository
+    public InternshipPlan approveMasterPlan(UUID planId, UUID reviewerId) {
+        InternshipPlan plan = repository
                 .findById(planId)
                 .orElseThrow(() -> new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Plan not found"));
 
-        masterPlan.setStatus("APPROVED");
-        masterPlan.setRejectionReason(null);
-        repository.save(masterPlan);
+        if (!"PENDING_APPROVAL".equals(plan.getStatus())) {
+            throw new AppException(ErrorCode.RESOURCE_INVALID_STATE, "Plan is not pending approval");
+        }
 
-        if (masterPlan.getJobPost() != null) {
-            List<InternshipPlanItem> masterItems = itemRepository.findByPlan_PlanId(masterPlan.getPlanId());
+        User reviewer =
+                userRepository.findById(reviewerId).orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
 
-            // Auto match to students who were accepted for this JobPost
-            List<com.ueims.model.entity.Application> acceptedApps =
-                    applicationRepository
-                            .findByJobPost_JobPostId(masterPlan.getJobPost().getJobPostId())
-                            .stream()
-                            .filter(a -> "ACCEPTED".equals(a.getStatus().name()))
+        if (plan.getSemester() != null && "LOCKED".equals(plan.getSemester().getStatus())) {
+            throw new AppException(ErrorCode.SEMESTER_LOCKED_DATE);
+        }
+
+        plan.setStatus("APPROVED");
+        plan.setApprovedBy(reviewer);
+        plan.setApprovedAt(LocalDateTime.now());
+        plan.setRejectionReason(null);
+        InternshipPlan saved = repository.save(plan);
+
+        // Notify enterprise
+        if (plan.getEnterprise() != null) {
+            List<User> enterpriseUsers =
+                    userRepository.findActiveUsersByRoleName("ENTERPRISE").stream()
+                            .filter(u -> u.getEnterprise() != null
+                                    && plan.getEnterprise()
+                                            .getEnterpriseId()
+                                            .equals(u.getEnterprise().getEnterpriseId()))
                             .toList();
-
-            for (com.ueims.model.entity.Application app : acceptedApps) {
-                // Find active assignment for this student in the same semester and enterprise
-                EnterpriseAssignment assignment = assignmentRepository
-                        .findByStudent_UserIdAndEnterprise_EnterpriseIdAndSemester_SemesterIdAndStatus(
-                                app.getStudent().getUserId(),
-                                app.getJobPost().getEnterprise().getEnterpriseId(),
-                                app.getJobPost().getSemester().getSemesterId(),
-                                "ACTIVE")
-                        .orElse(null);
-
-                if (assignment != null) {
-                    // Check if student already has a plan
-                    List<InternshipPlan> existingPlans =
-                            repository.findByAssignment_AssignmentId(assignment.getAssignmentId());
-                    if (existingPlans.isEmpty()) {
-                        // Clone master plan
-                        InternshipPlan studentPlan = InternshipPlan.builder()
-                                .assignment(assignment)
-                                .overallGoal(masterPlan.getOverallGoal())
-                                .status("APPROVED")
-                                .build();
-                        repository.save(studentPlan);
-
-                        for (InternshipPlanItem item : masterItems) {
-                            InternshipPlanItem clonedItem = InternshipPlanItem.builder()
-                                    .plan(studentPlan)
-                                    .weekNumber(item.getWeekNumber())
-                                    .taskDescription(item.getTaskDescription())
-                                    .targetDate(item.getTargetDate())
-                                    .status("PENDING")
-                                    .orderIndex(item.getOrderIndex())
-                                    .build();
-                            itemRepository.save(clonedItem);
-                        }
-                    }
-                }
-            }
-        }
-
-        // Notify Enterprise
-        if (masterPlan.getJobPost() != null && masterPlan.getJobPost().getCreatedBy() != null) {
-            Notification notif = Notification.builder()
-                    .recipient(masterPlan.getJobPost().getCreatedBy())
-                    .title("Internship Plan Approved")
-                    .message("Your internship plan for job post "
-                            + masterPlan.getJobPost().getTitle() + " has been approved by the Training Manager.")
-                    .type("PLAN_APPROVED")
-                    .referenceEntity("InternshipPlan")
-                    .referenceId(masterPlan.getPlanId())
-                    .build();
-            notificationService.save(notif);
-        }
-
-        return masterPlan;
-    }
-
-    @Override
-    @Transactional
-    public InternshipPlan rejectMasterPlan(UUID planId, String reason) {
-        InternshipPlan masterPlan = repository
-                .findById(planId)
-                .orElseThrow(() -> new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Plan not found"));
-
-        masterPlan.setStatus("REJECTED");
-        masterPlan.setRejectionReason(reason);
-        repository.save(masterPlan);
-
-        // Notify Enterprise
-        if (masterPlan.getJobPost() != null && masterPlan.getJobPost().getCreatedBy() != null) {
-            Notification notif = Notification.builder()
-                    .recipient(masterPlan.getJobPost().getCreatedBy())
-                    .title("Internship Plan Rejected")
-                    .message("Your internship plan for job post "
-                            + masterPlan.getJobPost().getTitle() + " has been rejected. Reason: " + reason)
-                    .type("PLAN_REJECTED")
-                    .referenceEntity("InternshipPlan")
-                    .referenceId(masterPlan.getPlanId())
-                    .build();
-            notificationService.save(notif);
-        }
-
-        return masterPlan;
-    }
-
-    @Override
-    @Transactional
-    public InternshipPlan save(InternshipPlan entity) {
-        String email = SecurityContextHolder.getContext().getAuthentication().getName();
-        var currentUser = userRepository.findByEmail(email).orElse(null);
-
-        // Check if saving a Master Plan (Job Post based)
-        if (entity.getJobPost() != null && entity.getJobPost().getJobPostId() != null) {
-            JobPost realJobPost = jobPostRepository
-                    .findById(entity.getJobPost().getJobPostId())
-                    .orElseThrow(() -> new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Job Post not found"));
-            entity.setJobPost(realJobPost);
-
-            if (currentUser == null
-                    || currentUser.getEnterprise() == null
-                    || !realJobPost
-                            .getEnterprise()
-                            .getEnterpriseId()
-                            .equals(currentUser.getEnterprise().getEnterpriseId())) {
-                throw new AppException(ErrorCode.UNAUTHORIZED);
-            }
-
-            entity.setStatus("PENDING_APPROVAL");
-            entity.setRejectionReason(null);
-
-            InternshipPlan savedPlan;
-            if (entity.getPlanId() == null) {
-                List<InternshipPlan> existingPlans = repository.findByJobPost_JobPostId(realJobPost.getJobPostId());
-                if (!existingPlans.isEmpty()) {
-                    InternshipPlan existingPlan = existingPlans.get(0);
-                    existingPlan.setOverallGoal(entity.getOverallGoal());
-                    existingPlan.setStatus("PENDING_APPROVAL");
-                    existingPlan.setRejectionReason(null);
-                    savedPlan = repository.save(existingPlan);
-                } else {
-                    savedPlan = repository.save(entity);
-                }
-            } else {
-                InternshipPlan existingPlan =
-                        repository.findById(entity.getPlanId()).orElse(null);
-                if (existingPlan != null) {
-                    existingPlan.setOverallGoal(entity.getOverallGoal());
-                    existingPlan.setStatus("PENDING_APPROVAL");
-                    existingPlan.setRejectionReason(null);
-                    savedPlan = repository.save(existingPlan);
-                } else {
-                    savedPlan = repository.save(entity);
-                }
-            }
-
-            // Notify TM
-            List<com.ueims.model.entity.User> tms = userRepository.findActiveUsersByRoleName("TRAINING_MANAGER");
-            for (com.ueims.model.entity.User tm : tms) {
+            for (User entUser : enterpriseUsers) {
                 Notification notif = Notification.builder()
-                        .recipient(tm)
-                        .title("New Internship Plan Pending Approval")
-                        .message("Enterprise " + currentUser.getEnterprise().getCompanyName()
-                                + " has submitted a new internship plan for Job Post: " + realJobPost.getTitle())
-                        .type("PLAN_PENDING")
+                        .recipient(entUser)
+                        .title("Internship Plan Approved")
+                        .message("Your internship plan for semester "
+                                + plan.getSemester().getSemesterCode()
+                                + " has been approved by the Training Manager.")
+                        .type("PLAN_APPROVED")
                         .referenceEntity("InternshipPlan")
-                        .referenceId(savedPlan.getPlanId())
+                        .referenceId(saved.getPlanId())
                         .build();
                 notificationService.save(notif);
             }
-
-            return savedPlan;
         }
 
-        // Saving student plan (fallback, normally shouldn't be used by enterprise anymore)
-        if (entity.getAssignment() == null || entity.getAssignment().getAssignmentId() == null) {
-            throw new AppException(ErrorCode.FIELD_REQUIRED, "Assignment or JobPost is required");
+        log.info("Plan {} APPROVED by reviewer {}", planId, reviewerId);
+        return saved;
+    }
+
+    @Override
+    @Transactional
+    public InternshipPlan rejectMasterPlan(UUID planId, UUID reviewerId, String reason) {
+        if (reason == null || reason.trim().length() < 5) {
+            throw new AppException(ErrorCode.REJECTION_REASON_REQUIRED);
         }
 
-        EnterpriseAssignment realAssignment = assignmentRepository
-                .findById(entity.getAssignment().getAssignmentId())
-                .orElseThrow(() -> new AppException(ErrorCode.ASSIGNMENT_NOT_FOUND, "Assignment not found"));
-        entity.setAssignment(realAssignment);
+        InternshipPlan plan = repository
+                .findById(planId)
+                .orElseThrow(() -> new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Plan not found"));
 
-        // Ownership: only the enterprise that owns the assignment can save the plan
-        var assignment = entity.getAssignment();
-        if (currentUser == null
-                || currentUser.getEnterprise() == null
-                || assignment.getEnterprise() == null
-                || !assignment
-                        .getEnterprise()
-                        .getEnterpriseId()
-                        .equals(currentUser.getEnterprise().getEnterpriseId())) {
-            throw new AppException(ErrorCode.UNAUTHORIZED);
+        if (!"PENDING_APPROVAL".equals(plan.getStatus())) {
+            throw new AppException(ErrorCode.RESOURCE_INVALID_STATE, "Plan is not pending approval");
         }
 
-        if (entity.getPlanId() == null) {
-            List<InternshipPlan> existingPlans =
-                    repository.findByAssignment_AssignmentId(realAssignment.getAssignmentId());
-            if (!existingPlans.isEmpty()) {
-                InternshipPlan existingPlan = existingPlans.get(0);
-                existingPlan.setOverallGoal(entity.getOverallGoal());
-                return repository.save(existingPlan);
+        User reviewer =
+                userRepository.findById(reviewerId).orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+
+        plan.setStatus("REJECTED");
+        plan.setRejectionReason(reason.trim());
+        plan.setApprovedBy(reviewer);
+        plan.setApprovedAt(LocalDateTime.now());
+        InternshipPlan saved = repository.save(plan);
+
+        // Notify enterprise
+        if (plan.getEnterprise() != null) {
+            List<User> enterpriseUsers =
+                    userRepository.findActiveUsersByRoleName("ENTERPRISE").stream()
+                            .filter(u -> u.getEnterprise() != null
+                                    && plan.getEnterprise()
+                                            .getEnterpriseId()
+                                            .equals(u.getEnterprise().getEnterpriseId()))
+                            .toList();
+            for (User entUser : enterpriseUsers) {
+                Notification notif = Notification.builder()
+                        .recipient(entUser)
+                        .title("Internship Plan Rejected")
+                        .message("Your internship plan for semester "
+                                + plan.getSemester().getSemesterCode()
+                                + " has been rejected. Reason: " + reason)
+                        .type("PLAN_REJECTED")
+                        .referenceEntity("InternshipPlan")
+                        .referenceId(saved.getPlanId())
+                        .build();
+                notificationService.save(notif);
             }
+        }
+
+        log.info("Plan {} REJECTED by reviewer {}", planId, reviewerId);
+        return saved;
+    }
+
+    /**
+     * Enterprise upsert plan (1 plan / DN / kỳ):
+     * - Nếu chưa có: tạo mới với status = PENDING_APPROVAL
+     * - Nếu đã có PENDING_APPROVAL hoặc REJECTED: update + reset về PENDING_APPROVAL
+     * - Nếu đã APPROVED: throw lỗi (giảng viên muốn strict, không cho sửa plan APPROVED)
+     */
+    @Override
+    @Transactional
+    public InternshipPlan upsertPlan(InternshipPlanDTO dto, UUID enterpriseId) {
+        // Validate enterprise
+        Enterprise enterprise = enterpriseRepository
+                .findById(enterpriseId)
+                .orElseThrow(() -> new AppException(ErrorCode.ENTERPRISE_NOT_FOUND));
+
+        // Validate semester
+        Semester semester = semesterRepository
+                .findById(dto.getSemesterId())
+                .orElseThrow(() -> new AppException(ErrorCode.SEMESTER_NOT_FOUND));
+
+        if ("LOCKED".equals(semester.getStatus())) {
+            throw new AppException(ErrorCode.SEMESTER_LOCKED_DATE);
+        }
+
+        // Optional jobPost (chỉ để tham chiếu, không bắt buộc)
+        JobPost jobPost = null;
+        if (dto.getJobPostId() != null) {
+            jobPost = jobPostRepository
+                    .findById(dto.getJobPostId())
+                    .orElseThrow(() -> new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Job Post not found"));
+
+            // jobPost phải thuộc DN này
+            if (!enterpriseId.equals(jobPost.getEnterprise().getEnterpriseId())) {
+                throw new AppException(ErrorCode.UNAUTHORIZED);
+            }
+
+            // jobPost phải cùng semester
+            if (!semester.getSemesterId().equals(jobPost.getSemester().getSemesterId())) {
+                throw new AppException(ErrorCode.RESOURCE_INVALID_STATE, "JobPost does not belong to this semester");
+            }
+        }
+
+        // Tìm plan hiện có
+        Optional<InternshipPlan> existingOpt =
+                repository.findByEnterprise_EnterpriseIdAndSemester_SemesterId(enterpriseId, semester.getSemesterId());
+
+        InternshipPlan saved;
+        if (existingOpt.isPresent()) {
+            InternshipPlan existing = existingOpt.get();
+            if ("APPROVED".equals(existing.getStatus())) {
+                throw new AppException(
+                        ErrorCode.RESOURCE_INVALID_STATE,
+                        "Cannot modify an APPROVED training plan. Please contact TM to make changes.");
+            }
+            existing.setOverallGoal(dto.getOverallGoal());
+            existing.setStatus("PENDING_APPROVAL");
+            existing.setRejectionReason(null);
+            if (jobPost != null) {
+                existing.setJobPost(jobPost);
+            }
+            saved = repository.save(existing);
         } else {
-            InternshipPlan existingPlan =
-                    repository.findById(entity.getPlanId()).orElse(null);
-            if (existingPlan != null) {
-                existingPlan.setOverallGoal(entity.getOverallGoal());
-                return repository.save(existingPlan);
-            }
+            InternshipPlan plan = InternshipPlan.builder()
+                    .enterprise(enterprise)
+                    .semester(semester)
+                    .jobPost(jobPost)
+                    .overallGoal(dto.getOverallGoal())
+                    .status("PENDING_APPROVAL")
+                    .build();
+            saved = repository.save(plan);
         }
 
-        return repository.save(entity);
+        // Notify TM
+        List<User> tms = userRepository.findActiveUsersByRoleName("TRAINING_MANAGER");
+        for (User tm : tms) {
+            Notification notif = Notification.builder()
+                    .recipient(tm)
+                    .title("Internship Plan Pending Approval")
+                    .message("Enterprise " + enterprise.getCompanyName()
+                            + " has submitted a training plan for semester "
+                            + semester.getSemesterCode())
+                    .type("PLAN_PENDING")
+                    .referenceEntity("InternshipPlan")
+                    .referenceId(saved.getPlanId())
+                    .build();
+            notificationService.save(notif);
+        }
+
+        log.info("Plan {} saved by enterprise {} for semester {}", saved.getPlanId(), enterpriseId, semester.getSemesterId());
+        return saved;
     }
 
     @Override
